syntax = "proto3";

package net.cydhra.acromantula.proto;

import "google/protobuf/empty.proto";

option java_multiple_files = true;

service ExportService {
  rpc getExporters (google.protobuf.Empty) returns (ExportersList);

  rpc exportFile (ExportCommand) returns (google.protobuf.Empty);
}

message ExportersList {
  repeated Exporter exporters = 1;
}

message Exporter {
  string name = 1;
  string defaultExtension = 2;
}

message ExportCommand {
  int32 fileId = 1;
  string filePath = 2;
  string targetPath = 3;
  string exporter = 4;
}